Add transactions and security
